--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="project.css">
+    <script src="https://raw.githubusercontent.com/courseraap/capstone/main/api.js"></script>
     <title>React App</title>
   </head>
   <body>
